--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>Ultimate Free Tools List</h1>
+<h1>Free Web-Based Tools Collection</h1>
 <p><a href="https://www.canva.com/">Canva - Free-to-Use Online Graphic Design Tool</a></p>
 <p><a href="https://imgbb.com/">ImgBB — Upload Image</a></p>
 <p><a href="https://www.remove.bg/">Remove Background from Image</a></p>
@@ -15,9 +15,5 @@
 <p><a href="https://fdown.net/download.php">Download Facebook Videos Online</a></p>
 <p><a href="https://y2down.cc/en/youtube-playlist.html">YouTube Playlist Downloader</a></p>
 <p><a href="https://www.befunky.com/create/blur-image/">BeFunky - Blur Effect</a></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 </body>
 </html>
